--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,20 @@
 body {
-  background-image: url('../img/paradise.jpg');
+  background-image: url('../img/index.jpg');
   background-size: cover;
 }
-
+/*buttons*/
 ul {
   float: right;
   list-style-type: none;
   font-style: italic;
-  margin-top: 15px;
+  margin-top: 20px;
   margin-right: 15px;
 }
-
+/*buttons*/
 ul li{
   display: inline-block;
   }
-
+/*buttons*/
 ul li a {
   text-decoration: none;
   color: white;
@@ -22,20 +22,20 @@ ul li a {
   border: 0.1px solid #fff;
   transition: 0.6s ease;
 }
-
+/*buttons*/
 ul li a:hover {
   background-color: white;
   color: black;
 }
-
+/*logo*/
 img {
   float: left;
   width: 200px;
   height: auto;
-  margin-top: 15px;
+  margin-top: 10px;
   margin-left: 15px;
 }
-
+/*greeting*/
 .glow {
   color: white;
   font-size: 3vw;
@@ -58,13 +58,33 @@ img {
   color: white;
   }
 } 
-
+/*greeting*/
 h1 {
   font-size: 45px;
   position: absolute;
   color: rgb(181, 250, 246);
-  top: 47.5%;
+  top: 51%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: Copperplate,Copperplate Gothic Light,fantasy;
 } 
+
+.header {
+  border: 2px solid rgb(0, 0, 0);
+  padding: 10px;
+  background-color: rgb(214, 208, 123);
+  margin: auto;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 1.8cm;
+  box-sizing: border-box;
+  border-width: 1px;
+
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+}
