--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,8 @@
-body {
-  background-image: url('../img/index.jpg');
-  background-size: cover;
-}
 /*buttons*/
 ul {
   float: right;
   list-style-type: none;
-  font-style: italic;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-top: 20px;
   margin-right: 15px;
 }
@@ -17,23 +13,23 @@ ul li{
 /*buttons*/
 ul li a {
   text-decoration: none;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 2px 23px;
-  border: 0.1px solid #fff;
+  border: 0.1px solid rgb(0, 0, 0);
   transition: 0.6s ease;
 }
 /*buttons*/
 ul li a:hover {
-  background-color: white;
-  color: black;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 /*logo*/
-img {
+.logo {
   float: left;
-  width: 200px;
+  width: 140px;
   height: auto;
-  margin-top: 10px;
-  margin-left: 15px;
+  /*margin-top: 5px;
+  margin-left: 15px;*/
 }
 /*greeting*/
 .glow {
@@ -63,7 +59,7 @@ h1 {
   font-size: 45px;
   position: absolute;
   color: rgb(181, 250, 246);
-  top: 51%;
+  top: 48.5%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: Copperplate,Copperplate Gothic Light,fantasy;
@@ -71,20 +67,73 @@ h1 {
 
 .header {
   border: 2px solid rgb(0, 0, 0);
-  padding: 10px;
-  background-color: rgb(214, 208, 123);
-  margin: auto;
+  padding: 0px;
+  background-color: rgb(175, 252, 248);
   margin-top: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   width: 100%;
-  height: 1.8cm;
+  height: 1.5cm;
   box-sizing: border-box;
   border-width: 1px;
-
 }
 
 * {
   margin: 0;
   padding: 0;
-  font-size: 20px;
+  font-size: 15px;
+}
+
+.mainImage {
+  margin: auto;
+  width: 100%;
+  height: 6.3in;
+  display: block;
+}
+
+h2 {
+  font-size: 45px;
+  position: absolute;
+  color: rgb(0, 0, 0);
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: Copperplate,Copperplate Gothic Light,fantasy;
+} 
+
+.ent {
+  float: left;
+  padding: 20px;
+  border: 2px solid rgb(0, 0, 0);
+  margin-top: 2in;
+  margin-left: 1in;
+  width: 3in;
+  height: 3in;
+}
+
+.ent1 {
+  float: right;
+  padding: 20px;
+  border: 2px solid rgb(0, 0, 0);
+  margin-top: 1.6in;
+  margin-right: 2in;
+  width: 3in;
+  height: 3in;
+}
+
+.entText {
+  float: left;
+  padding: 20px;
+  margin-top: 2in;
+  margin-left: 1in;
+  width: 3in;
+  height: 3in;
+}
+
+.entText1 {
+  float: left;
+  padding: 20px;
+  margin-top: 2in;
+  margin-left: 1in;
+  width: 3in;
+  height: 3in;
 }
